Added refresh button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </div>
  
    <p id="artCost">Price here</p>  
-
+<button onClick="window.location.reload();">Generate Another</button>
     </div>
 </body>
 
